--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                 slidesToScroll: 1,
                 autoplay: true,
                 autoplaySpeed: 2500,
+                arrows: false,
                 responsive: [
                     {
                         breakpoint: 768, // 平板寬度
@@ -128,7 +129,7 @@
                         slidesToScroll: 1,
                         autoplay: true,
                         autoplaySpeed: 2500,
-
+                        arrows: false,
                         }
                     },
                     {
@@ -138,7 +139,7 @@
                         slidesToScroll: 1,
                         autoplay: true,
                         autoplaySpeed: 2500,
-
+                        arrows: false,
                         }
                     }
                 ]
